2016-11-15  Eric Herman <eric@freesa.org>

	finally find and fix corner-case in from_decimal going negative

	* src/ehbigint-str.c: leave leading 00 if first hex byte > 0x7F
	* tests/test-div.c: add test with case which revealed bug
	* tests/test-from-decimal-to-decimal-round-trip.c: check >= 0

2016-11-13  Eric Herman <eric@freesa.org>

	implement "long mulitiplication" rather than loop-increment
	fix corner-case in ehbi_div
	reorganize the string parsing, improve naming
	make Ehbi_log_error macro names less "shouty"
	make Test_log_error macro names less "shouty"
	remove dependencies on libehstr, echeck
	add ifdef __cplusplus extern "C" to headers

	* src/ehbigint.c: rewrite ehbi_mul, reference ehbigint-str.h
	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h
	* src/ehbigint-str.c: move all the string stuff here,
		inline hex and decimal from libehstr
	* src/ehbigint-util.h: move out the string stuff
	* src/ehbigint-util.c: move out the string stuff
	* src/ehbigint-log.c: reference ehbigint-str.h
	* src/ehbigint.c: reference ehbigint-str.h
	* tests/echeck.h: copy-in files from echeck
	* tests/echeck.c: copy-in files from echeck
	* tests/*.c: remove reference to system echeck
	* README: add some usage docs
	* Makefile.am: include new ehbigint-str.*

2016-11-06  Eric Herman <eric@freesa.org>

	fight with autotools to get backtrace to work, defeated

	remove bi-calc from build

	* configure.ac: add checks for backtrace, backtrace_symbols_fd
	* Makefile.am: head->desk, just define _POSIX_SOURCE and retreat
	* src/ehbigint-log.h: add more concise ehbi_debug_to_hex
	* src/ehbigint-log.c: ifdef _POSIX_SOURCE; ehbi_debug_to_hex
	* tests/test-mul.c: expand test a bit


2016-11-05  Eric Herman <eric@freesa.org>

	fix a bug in ehbi_bytes_shift_left

	it would read bytes from off the end of the array!

	* tests/test-shift-left.c: demostrate the bug
	* src/ehbigint.c: fix the bug
	* Makefile.am: include the new test
	* .gitignore: exclude the new test