@@ -184,6 +184,7 @@ enum {
 	EHBI_BAD_DATA,
 	EHBI_CORRUPT_DATA,
 	EHBI_STACK_TOO_SMALL,
+	EHBI_DIVIDE_BY_ZERO,
 	EHBI_LAST
 };
 
